--- a/Kompleet/assets/css/style.css
+++ b/Kompleet/assets/css/style.css
@@ -335,7 +335,15 @@ body {
     }
 }
 
+#myVideo {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  /*min-width: 100%*/;
+  min-height: 100%;
+  width: 100%;
 
+}
 /*-----------------------------------------------------------------------------------*/
 
 
